--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <!------ Call To Action ------>
     <section class="cta">
         <h1>Enroll For Our Various Online Courses <br>Anywhere From The World</h1>
-        <a href="index.html" class="hero-btn">CONTACT US</a>
+        <a href="contact.html" class="hero-btn">CONTACT US</a>
     </section>
 
 
